Refactor Round Results Grid to Use League Round Results

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MobileMatchResultCard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MobileMatchResultCard.razor
@@ -41,7 +41,7 @@
                                                            Status="Match.Status"
                                                            HomeScore="prediction.HomeScore"
                                                            AwayScore="prediction.AwayScore"
-                                                           PointsAwarded="prediction.PointsAwarded" />
+                                                           Outcome="prediction.Outcome" />
                                 }
                                 else
                                 {
