--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/PredictionGrid.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/PredictionGrid.razor
@@ -53,7 +53,7 @@
                                     }
                                     else
                                     {
-                                        <PredictionStatusBadge Status="match.Status" HomeScore="prediction.HomeScore" AwayScore="prediction.AwayScore" PointsAwarded="prediction.PointsAwarded"></PredictionStatusBadge>
+                                        <PredictionStatusBadge Status="match.Status" HomeScore="prediction.HomeScore" AwayScore="prediction.AwayScore" Outcome="prediction.Outcome"/>
                                     }
                                 }
                                 else
