Refactor Update Match Results Handler

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/PredictionStatusBadge.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/PredictionStatusBadge.razor
@@ -37,7 +37,7 @@
     {
         PredictionOutcome.Incorrect => "badge-group--red",
         PredictionOutcome.CorrectResult => "badge-group--yellow",
-        PredictionOutcome.CorrectScore => "badge-group--green",
+        PredictionOutcome.ExactScore => "badge-group--green",
         _ => "badge-group--blue"
     };
 
@@ -45,7 +45,7 @@
     {
         PredictionOutcome.Incorrect => "bi bi-x-circle",
         PredictionOutcome.CorrectResult => "bi bi-check-circle",
-        PredictionOutcome.CorrectScore => "bi bi-check-circle-fill",
+        PredictionOutcome.ExactScore => "bi bi-check-circle-fill",
         _ => "bi bi-clock"
     };
 }
