--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/badges.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/badges.css
@@ -21,13 +21,23 @@
 .badge-group {
     display: inline-flex;
     align-items: center;
-    gap: 0.5rem; 
+    gap: 0.5rem;
     border-radius: 50rem;
     padding: 4px 12px 4px 4px;
     font-size: 0.8em;
     font-weight: bold;
     color: white;
 }
+
+.badge-group-with-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+    .badge-group-with-header > div:first-of-type {
+        font-weight: bold;
+    }
 
 .badge-group--green {
     background-color: var(--pl-green);
@@ -77,6 +87,7 @@
     font-size: 12px;
     background-color: white;
 }
+
     .badge-icon .bi {
         position: relative;
         top: 1px;
@@ -163,14 +174,16 @@
         .badge-group .badge-icon {
             font-size: 1em;
         }
-        .badge-group .badge-icon.large-font {
-            font-size: 1.5em;
-        }
+
+            .badge-group .badge-icon.large-font {
+                font-size: 1.5em;
+            }
 
     .badge-icon {
         font-size: 1.1em;
     }
 
+    .badge-group-with-header > div:first-of-type {
+        font-size: 0.75em;
+    }
 }
-
-
