--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
@@ -16,6 +16,7 @@
 @import url('components/cards.css');
 @import url('components/carousel.css');
 @import url('components/forms.css');
+@import url('components/shields.css');
 
 /* Page-specific styles */
 @import url('pages/dashboard.css');
